# python-dataintegrity

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
django-dataintegrity/: pyproject.toml
django-dataintegrity/docs/: AI.md
django-dataintegrity/src/django_dataintegrity/: __init__.py  apps.py  fields.py  rest_framework.py  urls.py
django-dataintegrity/src/django_dataintegrity/admin/: __init__.py  signstamp.py
django-dataintegrity/src/django_dataintegrity/managers/: __init__.py  provider.py
django-dataintegrity/src/django_dataintegrity/migrations/: 0001_initial.py  0002_rename_djdataintegrity_to_django_dataintegrity.py
django-dataintegrity/src/django_dataintegrity/models/: __init__.py  provider.py
django-dataintegrity/src/django_dataintegrity/templates/django_dataintegrity/: index.html  provider_detail.html  provider_list.html
django-dataintegrity/src/django_dataintegrity/views/: __init__.py  index.py  provider.py
django-dataintegrity/src/djdataintegrity/: __init__.py  apps.py  fields.py  rest_framework.py  urls.py
django-dataintegrity/src/djdataintegrity/admin/: __init__.py  provider.py
django-dataintegrity/src/djdataintegrity/managers/: __init__.py
django-dataintegrity/src/djdataintegrity/migrations/: 0001_initial.py
django-dataintegrity/src/djdataintegrity/models/: __init__.py  provider.py  signstamp.py
django-dataintegrity/src/djdataintegrity/static/djdataintegrity/css/: dataintegrity_provider.css
django-dataintegrity/src/djdataintegrity/templates/djdataintegrity/: index.html  provider_detail.html  provider_list.html
django-dataintegrity/src/djdataintegrity/views/: index.py  provider.py
django-dataintegrity/tests/: __init__.py  conftest.py  settings.py  test_models.py  urls.py
django-dataintegrity/tests/app/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
django-dataintegrity/tests/app/migrations/: 0001_initial.py
django-dataintegrity/tests/app/templates/app/: registry_list.html
python-dataintegrity/: LICENSE  pyproject.toml
python-dataintegrity/src/dataintegrity/providers/: __init__.py  eternitywall.py  origintimestamp.py
src/dataintegrity/providers/: opentimestamps.py  sigstore.py  woleet.py
