[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataintegrity"
version = "0.1.0"
description = "Gestionnaire de fournisseurs de preuve d'intégrité via hash (blockchain) ou signature."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hicinformatic", email = "hicinformatic@gmail.com"}
]
keywords = [
  "integrity",
  "proof",
  "hash",
  "blockchain",
  "signature",
  "verification",
  "provider",
  "python",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "clicommands>=0.1.0",
  "providerkit",
]

[project.scripts]
dataintegrity = "dataintegrity.cli:main"

[project.urls]
Homepage = "https://github.com/hicinformatic/python-dataintegrity"
Repository = "https://github.com/hicinformatic/python-dataintegrity"
Documentation = "https://github.com/hicinformatic/python-dataintegrity/tree/main/python-dataintegrity#readme"
Issues = "https://github.com/hicinformatic/python-dataintegrity/issues"

[tool.setuptools]
license-files = ["../LICENSE"]
package-data = {dataintegrity = [".commands.json"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
